--- a/README.adoc
+++ b/README.adoc
@@ -16,7 +16,7 @@ sections 3-6 of https://raw.githubusercontent.com/davedoesdev/packet_forwarder_s
 
 You can use Anthony Kirby's excellent https://github.com/anthonykirby/lora-packet[packet decoder and encoder] to help parse and construct packet data.
 
-**For a higher-level LoRa library, with support for over-the-air-activation,
+**For a higher-level LoRa library, with support for over-the-air activation,
 try https://github.com/davedoesdev/lorano[lorano].**
 
 == Example
