--- a/README.adoc
+++ b/README.adoc
@@ -225,6 +225,7 @@ to perform the reset:
 [source,sh]
 .iC880A-SPI_reset.sh
 ----
+#!/bin/sh
 echo "25" > /sys/class/gpio/export
 echo "out" > /sys/class/gpio/gpio25/direction
 echo "1" > /sys/class/gpio/gpio25/value
